# -

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PROGRESS.md  README.md  README_FINAL_DEPLOY.md  app.wxss  docker-compose.yml  package-lock.json  package.json  remote-ctl.mjs  test-results.json
digital-soul/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
digital-soul/config/: agents.yaml  appointments.yaml  bedtime.yaml  belongings.yaml  care.yaml  contacts.yaml  countdown.yaml  devices.yaml  family.yaml  favors.yaml  habit_goals.yaml  health.yaml  heirlooms.yaml  humor.yaml  identity.yaml  keep_in_touch.yaml  legacy.yaml  mannerisms.yaml  medications.yaml  memorial.yaml  models.yaml  music.yaml  opinions.yaml  pets.yaml  plants.yaml  poetry.yaml  preferences.yaml  recipes.yaml  relationships.yaml  safety.yaml  sayings.yaml  spouse.yaml  stories.yaml  teachings.yaml  values.yaml
digital-soul/docs/: architecture.md  deploy.md  finetune.md  knowledge_vault.md  llm_brain.md  overview.md  voice_clone.md
digital-soul/dsoul/: __init__.py  actions.py  acupoints.py  affection.py  agent.py  animal_facts.py  animal_sounds.py  anniversary.py  annotate.py  anti_wander.py  anticipate.py  antifraud.py  appliances.py  appointments.py  astronomy.py  auspicious.py  authority.py  bank_help.py  bedtime_stories.py  belongings.py  blessings.py  board_games.py  book.py  boredom.py  brain_train.py  briefing.py  bug_bites.py  cli.py  (+257 more)
mnemo/: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
(+1022 files in other folders)
